# Raekor

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  GE  GE.sln  GE.vcxproj  GE.vcxproj.filters  LICENSE  README.md  Raekor.aps  Raekor.sln  Raekor.sln.startup.json  Raekor.vcxproj  Raekor.vcxproj.filters  TODO.txt  TODOs.txt  besttheme.vssettings  config.json  cvars.json  imgui.ini  init.bat  makefile  perlin.chai  shaders.json  spheres.scene  vcpkg.json
Assets/: normal4x4.dds
Code/: Core.natvis
Code/Editor/: App.cpp  App.h  CMakeLists.txt  Compiler.cpp  Compiler.h  DXApp.cpp  DXApp.h  Editor.cpp  Editor.h  GUI.cpp  GUI.h  Launcher.cpp  Launcher.h  ShaderGraph.cpp  ShaderGraph.h  ShaderGraphNodes.cpp  ShaderGraphNodes.h  Widget.cpp  Widget.h  editor.cpp  editor.h  main.cpp  pch.h  shared.h
Code/Editor/Assets/Icon/: Icon.aps
Code/Editor/Widgets/: AssetsWidget.cpp  AssetsWidget.h  ConsoleWidget.cpp  ConsoleWidget.h  HierarchyWidget.cpp  HierarchyWidget.h  InspectorWidget.cpp  InspectorWidget.h  MenubarWidget.cpp  MenubarWidget.h  NodeGraphWidget.cpp  NodeGraphWidget.h  ProfileWidget.cpp  ProfileWidget.h  SequenceWidget.cpp  SequenceWidget.h  ViewportWidget.cpp  ViewportWidget.h
Code/Engine/: Animation.cpp  Animation.h  Application.cpp  Application.h  Archive.cpp  Archive.h  Assets.cpp  Assets.h  Assimp.cpp  CMakeLists.txt  CVars.cpp  CVars.h  Camera.cpp  Camera.h  Compiler.cpp  Compiler.h  Components.cpp  Components.h  DDS.cpp  DDS.h  DebugRenderer.cpp  DebugRenderer.h  Defines.h  DiscordRPC.cpp  DiscordRPC.h  ECS.cpp  ECS.h  FBX.cpp  FBX.h  GLTF.cpp  GLTF.h  GUI.cpp  GUI.h  Input.cpp  Input.h  Iter.h  JSON.cpp  JSON.h  Maths.cpp  Maths.h  (+61 more)
Code/Engine/Renderer/: CommandList.cpp  CommandList.h  DXCommandList.cpp  DXCommandList.h  DXDevice.cpp  DXDevice.h  DXRayTracing.cpp  DXRayTracing.h  DXRenderGraph.cpp  DXRenderGraph.h  DXRenderPasses.cpp  DXRenderer.cpp  DXRenderer.h  DXResource.cpp  DXResource.h  DXScene.cpp  DXScene.h  DXShader.cpp  DXShader.h  DXUpscaler.cpp  DXUpscaler.h  Device.cpp  Device.h  GPUProfiler.cpp  GPUProfiler.h  RayTracedScene.cpp  RayTracedScene.h  RayTracing.cpp  RayTracing.h  RenderGraph.cpp  RenderGraph.h  RenderPasses.cpp  RenderPasses.h  RenderUtil.h  Renderer.cpp  Renderer.h  Resource.cpp  Resource.h  Samplers.h  Shader.cpp  (+4 more)
Code/Game/: CMakeLists.txt  Game.cpp  Game.h  main.cpp
Code/Game/Scripts/: AnimateSunScript.cpp  CharacterControllerScript.cpp  GunScript.cpp  LightsScript.cpp  Scripts.cpp  Scripts.h  TestScript.cpp  VehicleControllerScript.cpp
Code/Scripts/: AnimateSunScript.cpp  CMakeLists.txt  CharacterControllerScript.cpp  GunScript.cpp  LightsScript.cpp  Scripts.h  TestScript.cpp  VehicleControllerScript.cpp  main.cpp
assets/: black4x4.dds  white4x4.dds
dependencies/: glad.bat  init.bat
linux_build/: GE
scenes/: bloom test.scene  pbr.scene  pica.scene  plane.scene  shadow test.scene
scripts/: test.cpp
shader/: compile.bat  raytrace.rchit  raytrace.rgen  raytrace.rmiss  shader.frag  shader.vert
shaders/: compile.bat  frag.spv  fragment2.glsl  simple.frag  simple.vert  simple_fp.cso  simple_fp.glsl  simple_fp.hlsl  simple_pixel.cso  simple_pixel.hlsl  simple_vertex.cso  simple_vertex.hlsl  skybox.vert  skybox_fp.cso  skybox_vertex.cso  skybox_vertex.glsl  skybox_vertex.hlsl  vert.spv  vulkan.frag  vulkan.vert
source/DX12/: CMakeLists.txt  DXApp.cpp  DXApp.h  DXBindless.cpp  DXBindless.h  DXBlit.cpp  DXBlit.h  DXCommandList.cpp  DXCommandList.h  DXDescriptor.cpp  DXDescriptor.h  DXDevice.cpp  DXDevice.h  DXDownsample.cpp  DXDownsample.h  DXGBuffer.cpp  DXGBuffer.h  DXRayTracing.cpp  DXRayTracing.h  DXRenderGraph.cpp  DXRenderGraph.h  DXRenderPasses.cpp  DXRenderPasses.h  DXRenderer.cpp  DXRenderer.h  DXResource.cpp  DXResource.h  DXSampler.h  DXScene.cpp  DXScene.h  DXShader.cpp  DXShader.h  DXShadows.cpp  DXShadows.h  DXSwapchain.cpp  DXSwapchain.h  DXTAA.cpp  DXTAA.h  DXUpscaler.cpp  DXUpscaler.h  (+5 more)
source/Raekor/: CMakeLists.txt  OS.cpp  OS.h  anim.cpp  anim.h  animation.cpp  animation.h  application.cpp  application.h  archive.cpp  archive.h  assets.cpp  assets.h  assimp.cpp  assimp.h  async.cpp  async.h  camera.cpp  camera.h  compiler.cpp  compiler.h  components.cpp  components.h  cvars.cpp  cvars.h  dds.cpp  dds.h  debug.cpp  debug.h  defines.h  ecs.cpp  ecs.h  editor.cpp  editor.h  fbx.cpp  fbx.h  gltf.cpp  gltf.h  gui.cpp  gui.h  (+41 more)
source/Raekor/widgets/: NodeGraphWidget.cpp  NodeGraphWidget.h  ProfileWidget.cpp  ProfileWidget.h  SequenceWidget.cpp  SequenceWidget.h  assetsWidget.cpp  assetsWidget.h  consoleWidget.cpp  consoleWidget.h  hierarchyWidget.cpp  hierarchyWidget.h  inspectorWidget.cpp  inspectorWidget.h  menubarWidget.cpp  menubarWidget.h  metricsWidget.cpp  metricsWidget.h  randomWidget.cpp  randomWidget.h  viewportWidget.cpp  viewportWidget.h
source/Scripts/: AnimateSunScript.cpp  CMakeLists.txt  CharacterController.cpp  CharacterControllerScript.cpp  Lights.cpp  LightsScript.cpp  TestScript.cpp  VehicleControllerScript.cpp  main.cpp  script.cpp
source/VK/: CMakeLists.txt  VKAccelerationStructure.cpp  VKApp.cpp  VKApp.h  VKBase.cpp  VKBase.h  VKCommandList.cpp  VKCommandList.h  VKDescriptor.cpp  VKDescriptor.h  VKDevice.cpp  VKDevice.h  VKExtensions.cpp  VKExtensions.h  VKFrameBuffer.cpp  VKFrameBuffer.h  VKGBuffer.cpp  VKGBuffer.h  VKImGui.cpp  VKImGui.h  VKPass.cpp  VKPass.h  VKPipeline.cpp  VKPipeline.h  VKRenderer.cpp  VKRenderer.h  VKShader.cpp  VKShader.h  VKStructs.h  VKSwapchain.cpp  VKSwapchain.h  VKTexture.cpp  VKTexture.h  VKUtil.h  main.cpp  pch.cpp  pch.h
source/dx12-rs/: Cargo.toml  build.rs
source/dx12-rs/src/: app.rs  barrier.rs  components.rs  main.rs
src/: anim.cpp  app.cpp  application.cpp  apps.cpp  assets.cpp  assimp.cpp  async.cpp  buffer.cpp  camera.cpp  components.cpp  dds.cpp  ecs.cpp  editor.cpp  entry.cpp  framebuffer.cpp  gl_raytracer.cpp  gui.cpp  input.cpp  main.cpp  math.cpp  mesh.cpp  model.cpp  new_vulkan.cpp  opengl.cpp  pch.cpp  physics.cpp  renderer.cpp  renderpass.cpp  rmath.cpp  scene.cpp  script.cpp  shader.cpp  stb_impl.cpp  (+5 more)
(+467 files in other folders)
